[package]
name = "norvar"
version = "0.1.0"
edition = "2024"

[dependencies]
cmd_lib = "2.0.0"
figlet-rs = "0.1.5"
smartcore = { version = "0.4.9", features = ["ndarray-bindings"] }
burn = { version = "0.19.1", features = ["train", "vision", "network", "cpu", "cuda", "ndarray", "wgpu", "dataset", "std", "autodiff", "fusion", "store", "doc", "metrics"] }
candle-coreml = "0.3.1"
clap = { version = "4.5.60", features = ["derive"] }
